<resources>
    <string name="app_name">MyPet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registerButtonText">Register</string>
    <string name="signinButtonText">Sign In</string>
    <string name="createAnAccountTitle">Create an Account</string>
    <string name="userNameTextView">Username:</string>
    <string name="emailTextView">Email:</string>
    <string name="confirmEmailTextView">Confirm Email:</string>
    <string name="passwordTextView">Password:</string>
    <string name="confirmPasswordTextView">Confirm Password:</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="title_activity_main_screen">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="emailPlaceHldr">Email@domain.com</string>
    <string name="passwordPlacehldr">Password</string>
    <string name="emailPlacehldr">Email</string>
    <string name="jonathansName">Mickey</string>
    <string name="username">Username \n Email Address \n Other optional user information</string>
    <string name="emptyString" />
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="SettingsTitle">Settings</string>
    <string name="Notifications">Notifications</string>
    <string name="notificationDiscription">Allowing MyPet to push notifications to your phone</string>
    <string name="locationSwitch">Location</string>
    <string name="locationDescription">Will allow MyPet to access your current location</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="examplePetName">Name:Spot \n Age:2 \n Description of the pet</string>
    <string name="examplePetNameTwo">Name:Daisy \n Age:2 \n Description of the pet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string name="radius_label">Radius</string>
    <string name="radius_caption">The maximum distance from you that you would like
        to see posts and get notifications from</string>
    <string-array name="radius_options">
        <item>1 mile</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>20 miles</item>
        <item>50 miles</item>
        <item>Everywhere</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="zipText">Turn on the location setting or enter a Zip code so that MyPet can
        search for posts by you current location</string>
    <string name="petName">Pet Name:</string>
    <string name="speciesText">Species:</string>
    <string name="breedText">Breed:</string>
    <string name="markingsText">Markings:</string>
    <string name="rabiesTagText">Rabies Tag Number:</string>
    <string name="biteStatus">Does Your Pet Bite</string>
    <string name="notesText">Helpful Information About Your Pet</string>
    <string name="infoHint">Please enter your pet information here</string>
    <string name="addPetText">Add Pet</string>
    <string name="firstNameTextView">First Name:</string>
    <string name="lastNameTextView">Last Name:</string>
    <string name="addressTextView">Address:</string>
    <string name="editProfileTitle">Profile Editor</string>
    <string name="choosePictureText">Select a Picture</string>
    <string name="CurrentUserName">UNPlaceholder</string>
    <string name="UEPlaceholder">Email@placeholer.com</string>
    <string name="changePassword">Change Password</string>
    <string name="currentUserFirstName">First</string>
    <string name="currentUserLastName">Last</string>
    <string name="saveChangesButtonText">Save Changes</string>
    <string name="petProfileEditor">Pet Profile Editor</string>
    <string name="editprofilebutton">editProfileButton</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="name2">Name</string>
    <string name="name3">Name</string>
    <string name="name4">Name</string>
    <string name="name5">Name</string>
    <string name="lostSwitchText">Mark Your Pet As Lost</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio2">Android Studio</string>
    <string name="android_studio_android_com2">android.studio@android.com</string>
    <string name="firstName">Maddie</string>
    <string name="lastName">Robinson</string>
    <string name="profileUserName">\@username</string>
    <string name="address">123 Main Street \nRadford, VA\n 22421</string>
    <string name="email">email@email.com</string>
    <string name="blah">blah</string>
    <string name="title_activity_main__tab_activity_1">MainActivity_TabActivity_1</string>
    <string name="LostPageTitle">Lost Pets Page</string>
    <string name="goToFoundPage">Go To Found Page</string>
    <string name="lostPetsPage">Lost Pets Page</string>
    <string name="foundPetsPage">Found Pets Page</string>
    <string name="title_activity_found_page">FoundPage</string>
    <string name="FoundPetsTitle">Create A Found A Post</string>
    <string name="SelectAPhoto">Select A Photo</string>
    <string name="createFoundButton">Create The Post</string>
    <string name="Notes">Information about the pet</string>
    <string name="notesas">Please enter any helpful information on the pet you have found</string>
</resources>
