<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="16dp"
    tools:context="com.example.jona1.mypet.SettingActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/notificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Notifications"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/notificationsDiscription"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:text="@string/notificationDiscription" />

            <Switch
                android:id="@+id/locationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationSwitch"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/locationtextView"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/locationDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius_label"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/radius_options" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius_caption" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Settings" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
