<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jona1.mypet.EditProfileActivity">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="13dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editProfileEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/editProfileTitle"
                android:textAlignment="center"
                android:textColor="@color/wallet_bright_foreground_holo_light"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/petProfileImage"
                android:contentDescription="@string/description"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_below="@+id/editProfileEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@color/common_signin_btn_dark_text_disabled" />

            <Button
                android:id="@+id/selectPicture"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/petProfileImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_menu_camera"
                android:gravity="center"
                android:text="@string/choosePictureText"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/changeFName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/selectPicture"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/changeLName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeFName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/name2" />

            <EditText
                android:id="@+id/changeEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeLName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/name3"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/changeAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/name4" />

            <Button
                android:id="@+id/saveChangesButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeAddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/saveChangesButtonText" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
