<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jona1.mypet.EditPetProfile">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="587dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editProfileEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/editProfileTitle"
                android:textAlignment="center"
                android:textColor="@color/wallet_bright_foreground_holo_light"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/petProfileImage"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_below="@+id/editProfileEditTitle"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                app:srcCompat="@color/common_signin_btn_dark_text_disabled" />

            <Button
                android:id="@+id/selectPetPicture"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/petProfileImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_menu_camera"
                android:gravity="center"
                android:text="@string/choosePictureText" />

            <EditText
                android:id="@+id/changePetName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/selectPetPicture"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <EditText
                android:id="@+id/changeBreed"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/changePetName"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <EditText
                android:id="@+id/changeMarkings"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeBreed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="Name" />

            <EditText
                android:id="@+id/changeRTag"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeMarkings"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="Name" />

            <Button
                android:id="@+id/saveChangesButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/changeRTag"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/saveChangesButtonText" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
